# Web2DSocialGameEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  agent_test_server.sh  build_release.sh  build_server.sh  compile_server.sh  local_test_server.sh  messages.db  reset_tower_defense_for_testing.sh  run_server.sh  test-integration.sh  tower_defense_map_metadata_format.md
_codeql_build_dir/: Makefile
api/: Build.md  campaign.md  createAccount.md  createDukedom.md  endMiniGame.md  executeAction.md  getCharacter.md  getDukedoms.md  getFiefdom.md  getGameInfo.md  getMiniGameConfig.md  getPlayer.md  getPlayerState.md  getTexts.md  getWorld.md  hunt.md  joinDukedom.md  login.md  sally.md  setCharacterArchetype.md  setCharacterSex.md  startDukeTrack.md  startMiniGame.md  tdRound.md  updateCharacterProfile.md  updateProfile.md  updateUserProfile.md  verifyAgeOverride.md
backend/: CMakeLists.txt  README.md  build.sh
backend/_codeql_build_dir/: game_server
backend/include/: api_handler.h  database.h  web_server.h
backend/src/: api_handler.cpp  database.cpp  main.cpp  web_server.cpp
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/include/: client.h  input_manager.h  network_client.h  renderer.h
client/public/: safe_words.json
client/src/: App.svelte
client/src/components/: AuthPage.svelte  Book.svelte  CharacterSelect.svelte  CreateAccountPage.svelte  DialogOverlay.svelte  DukedomCreate.svelte  DukedomJoin.svelte  ErrorDisplay.svelte  GameText.svelte  LanguageSelect.svelte  LoginPage.svelte  MissionSelect.svelte  ParchmentOverlay.svelte  PatentScreen.svelte  PathSelect.svelte  SexSelect.svelte  StoryText.svelte  TownView.svelte
client/src/core/: client.cpp
client/src/input/: input_manager.cpp
client/src/lib/: GameBoard.svelte  api.ts  auth.ts  digitalCredentials.ts  errors.ts  game_state.ts  storage.ts  stores.ts  tower_defense_map.ts  tower_defense_types.ts
client/src/minigames/: MiniGameContainer.svelte  MiniGameSelect.svelte
client/src/minigames/tower_defense/: SimpleGame.svelte  TowerDefenseGame.svelte  tower_defense_engine.ts  tower_defense_types.ts
client/src/minigames/weeding/: WeedingGame.svelte  weeding_engine.ts  weeding_types.ts
client/src/networking/: network_client.cpp
client/src/rendering/: renderer.cpp
docs/: README.md  SimpleGame_changes.md
examples/: README.md
frontend/: README.md  index.html  run.sh
frontend/src/: api-client.js  game.js  main.js  styles.css
server/: ActionHandler.hpp  ActionHandlers.cpp  ActionHandlers.hpp  ApiHandlers.hpp  ApiResponse.hpp  AuthManager.hpp  CMakeLists.txt  Database.hpp  DigitalCredentialsVerifier.cpp  DigitalCredentialsVerifier.hpp  Dockerfile  FiefdomData.hpp  FiefdomFetcher.cpp  FiefdomFetcher.hpp  GameConfigCache.cpp  GameConfigCache.hpp  GridCollision.cpp  GridCollision.hpp  ImageReader.cpp  ImageReader.hpp  MoraleCalculator.cpp  MoraleCalculator.hpp  PasswordHash.hpp  PlayerStateDB.cpp  PlayerStateDB.hpp  README.md  SafeNameGenerator.cpp  SafeNameGenerator.hpp  TDGoldCalculator.cpp  TDGoldCalculator.hpp  TDPlacementValidator.cpp  TDPlacementValidator.hpp  TextManager.cpp  TextManager.hpp  TowerDefenseMapCache.cpp  TowerDefenseMapCache.hpp  UnitUnlockCalculator.cpp  UnitUnlockCalculator.hpp  combatants.cpp  combatants.hpp  (+10 more)
server/docs/: collision_detection.md  combat_system.md  fiefdom_building_types.md  fiefdom_officials.md  game_logic.md  heroes.md  production_calculation.md  time_update_flow.md
server/include/: database_manager.h  game_world.h  network_server.h  server.h
server/mini_games/: mini_game_handler.hpp  mini_game_registry.cpp  mini_game_registry.hpp  tower_defense_handler.cpp  tower_defense_handler.hpp  weeding_handler.cpp  weeding_handler.hpp
server/src/core/: server.cpp
server/src/database/: database_manager.cpp
server/src/game/: game_world.cpp
server/src/networking/: network_server.cpp
server/tables/: README.md  characters.md  dukedom_members.md  dukedoms.md  fiefdom_buildings.md  fiefdom_heroes.md  fiefdoms.md  message_queues.md  officials.md  player_messages.md  players.md  stationed_combatants.md  users.md
server/uWebSockets-include/: AsyncSocket.h  AsyncSocketData.h  BloomFilter.h  CachingApp.h  ChunkedEncoding.h  ClientApp.h  Http3App.h  Http3Context.h  Http3ContextData.h  Http3Request.h  Http3ResponseData.h  HttpContextData.h  HttpErrors.h  HttpResponseData.h  HttpRouter.h  LocalCluster.h  Loop.h  MessageParser.h  MoveOnlyFunction.h  Multipart.h  PerMessageDeflate.h  QueryParser.h  TopicTree.h  WebSocket.h  WebSocketContext.h
server/uWebSockets-include/uWebSockets/: App.h  Http3Response.h  HttpContext.h  HttpParser.h  HttpResponse.h  LoopData.h  ProxyParser.h  Utilities.h  WebSocketContextData.h  WebSocketData.h  WebSocketExtensions.h  WebSocketHandshake.h  WebSocketProtocol.h
shared/include/: common_types.h  logger.h  protocol.h
shared/src/utils/: logger.cpp
tools/: check_configs.py  generate_placeholder_art.py  generate_translations.py
